GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/Public_Site_Case_Holder__c.object-meta.xml
<CustomObject>
    <label>Public Site Case Holder</label>
    <nameField>
        <label>Public_Site_Case_Holder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Site Case Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>