GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>