GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>