GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Case_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type_Name__c</fullName>
    <label>Case Record Type Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>