GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>