GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reason Code</label>
    <referenceTo>Reason_Code__c</referenceTo>
    <relationshipLabel>Public Site Case Holders</relationshipLabel>
    <relationshipName>Public_Site_Case_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>