GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <label>Check In Date</label>
    <length>24</length>
    <type>Text</type>
</CustomField>