GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <label>Check Out Date</label>
    <length>24</length>
    <type>Text</type>
</CustomField>