GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Public Site Case Holders</relationshipLabel>
    <relationshipName>Public_Site_Case_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>