GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Convert_To_Case__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert To Case</label>
    <type>Checkbox</type>
</CustomField>