GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Customer_Struggle__c.field-meta.xml
<CustomField>
    <fullName>Customer_Struggle__c</fullName>
    <label>Customer Struggle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>