GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>8</length>
    <type>Text</type>
</CustomField>