GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>