GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Public Site Case Holders</relationshipLabel>
    <relationshipName>Public_Site_Case_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>