GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Hotel_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booking_Reference__c</fullName>
    <label>Hotel Booking Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>