GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Initial_Reason_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Reason_For_Contact__c</fullName>
    <label>Initial Reason For Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>