GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Journey_Type_Product__c.field-meta.xml
<CustomField>
    <fullName>Journey_Type_Product__c</fullName>
    <label>Journey Type / Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>