GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Loyalty_Category__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Category__c</fullName>
    <label>Loyalty Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>