GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Loyalty_Topic__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Topic__c</fullName>
    <label>Loyalty Topic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>