GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>