GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>54</length>
    <type>Text</type>
</CustomField>