GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Reason_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Contact__c</fullName>
    <label>Reason For Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>