GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Sundry__c.field-meta.xml
<CustomField>
    <fullName>Sundry__c</fullName>
    <label>Sundry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>