GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <description>To capture traveler&#39;s telephone number on CompApp Contact Us page.</description>
    <label>Telephone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>