GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Public Site Case Holders</relationshipLabel>
    <relationshipName>Public_Site_Case_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>