GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Tone_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Tone_of_Contact__c</fullName>
    <label>Tone of Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>