GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Travel_Based_Disruption__c.field-meta.xml
<CustomField>
    <fullName>Travel_Based_Disruption__c</fullName>
    <label>Travel Based Disruption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>