GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/Website_Language__c.field-meta.xml
<CustomField>
    <fullName>Website_Language__c</fullName>
    <label>Website Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>