GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/fields/What_Is_The_Question__c.field-meta.xml
<CustomField>
    <fullName>What_Is_The_Question__c</fullName>
    <label>What Is The Question?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>