GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Initial_Reason_For_Contact__c</columns>
    <columns>Hotel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>