GearsetPOC/force-app/main/default/objects/Public_Site_Case_Holder__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Initial_Reason_For_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>